compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case_subject_pattern_unify.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 276
expression: "case 1.0 { 1 -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case 1.0 { 1 -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:12
  │
1 │ case 1.0 { 1 -> 1 }
  │            ^

Expected type:

    Float

Found type:

    Int
